...
private const val BLASTOISE_DESCRIPTION =
    "Blastoise has water spouts that protrude from its shell. The water spouts are very accurate. " +
        "They can shoot bullets of water with enough accuracy to strike empty cans from a distance of over 160 feet."

val SamplePokemonData =
    listOf(
        Pokemon(
            id = 1,
            name = "Bulbasaur",
            description =
                "Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. " +
                    "By soaking up the sun's rays, the seed grows progressively larger.",
            typeOfPokemon = listOf("Grass", "Poison"),
            category = "Seed",
            image = 1,
...
            specialDefense = 105,
            speed = 78,
            evolutionChain = listOf(Evolution(7, -1), Evolution(8, 16), Evolution(9, 32)),
        ),
        Pokemon(
            id = 25,
            name = "Pikachu",
            description =
                "Whenever Pikachu comes across something new, it blasts it with a jolt of electricity. " +
                    "If you come across a blackened berry, it’s evidence that this pokemon mistook the " +
                    "intensity of its charge",
            typeOfPokemon = listOf("Electric"),
            category = "Mouse Pokémon",
...
