...
        startActivityAndWait()
        device.wait(Until.hasObject(By.text("Pokedex")), 30_0000)

        val button = device.findObject(By.text("Pokedex"))
        button.click()

        val list = device.findObject(By.res("PokedexLazyGrid"))
        if (list != null) {
            list.setGestureMargin(device.displayWidth / 5)
            list.fling(Direction.DOWN)
        }
    }
}
